package com.armyofthree.refresh.models;

public class DisplacedPerson {
    private int numberOfPeople;
    private boolean lookingForJob;
    private boolean lookingForShelter;
    private boolean lookingForBusinessLocation;
    private boolean lookingForFood;
    private boolean lookingForMedicalAssistance;
    private boolean lookingToSellProducts;
    private String documents;
    private boolean pets;
}
