package com.armyofthree.refresh.models;

public enum UserType {
    ADMIN,
    VOLUNTEER,
    DISPLACED_PERSON
}
