package com.armyofthree.refresh.models;

public class Volunteer {
    private List<Location> homes;
    private List<Location> businessSpaces;
    private List<Job> jobs;
    private List<Food> foodServices;
    private List<Education> schools;
    private String record;
    private String identityCard;
}
