package com.armyofthree.refresh.models.services;

import java.util.List;

public class Education extends Service {
    private List<EducationType> educationType;
}
