package com.armyofthree.refresh.models.services;

public enum EducationType {
    KINDERGARTEN,
    PRIMARY,
    MIDDLE,
    HIGH_SCHOOL,
    COLLEGE,
    TRADE_SCHOOL
}
