package com.armyofthree.refresh.models.services;

import java.util.List;

public class Food extends Service {
    private List<String> menu;
    private FoodType foodType;
}
