package com.armyofthree.refresh.models.services;

public enum FoodType {
    NORMAL,
    VEGAN,
    VEGETARIAN,
    HALAL,
    KOSHER
}
