package com.armyofthree.refresh.models.services;

import java.util.List;

public class Job extends Service {
    private List<String> educationalRequirements;
    private List<String> languageRequirements;

}
