package com.armyofthree.refresh.models.services;

public enum LocationType {
    HOME,
    BUSINESS,
    SHELTER
}
