package com.armyofthree.refresh.models.services;

public class MedicalAssistance {
    private AssistanceType assistanceType;
}
