package com.armyofthree.refresh.models.services;

public enum ServiceType {
    LOCATION,
    JOB,
    MEDICAL,
    FOOD,
    EDUCATION
}
